secure/secure-network-security-policies/old_knps/eja-cassandra-denyall.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cassandra-isolate
  namespace: eja
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: eja
      app.kubernetes.io/name: eja-cassandra
  policyTypes:
    - Ingress
    - Egress
