secure/secure-network-security-policies/old_knps/eja-javaapp-denyall.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: javaapp-isolate
  namespace: eja
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: eja
      app.kubernetes.io/name: eja-javaapp
  policyTypes:
    - Ingress
    - Egress
