secure/secure-network-security-policies/old_knps/eja-javaapp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: javaapp-allow
  namespace: eja
spec:
  # ingress policies
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: example-java-app
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eja
              app.kubernetes.io/name: eja-jclient
      ports:
        - port: 8080
          protocol: TCP
  # egress policies
  egress:
    # mongo
    - to:
        - namespaceSelector:
            matchLabels:
              app: example-java-app
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eja
              app.kubernetes.io/name: eja-mongo
      ports:
        - port: 27017
          protocol: TCP
    # redis
    - to:
        - namespaceSelector:
            matchLabels:
              app: example-java-app
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eja
              app.kubernetes.io/name: eja-redis
      ports:
        - port: 6379
          protocol: TCP
    # cassandra
    - to:
        - namespaceSelector:
            matchLabels:
              app: example-java-app
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eja
              app.kubernetes.io/name: eja-cassandra
      ports:
        - port: 9042
          protocol: TCP
    # DNS resolution
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: eja
      app.kubernetes.io/name: eja-javaapp
  policyTypes:
    - Ingress
    - Egress
