secure/secure-network-security-policies/old_knps/eja-jclient.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jclient-allow
  namespace: eja
spec:
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              app: example-java-app
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eja
              app.kubernetes.io/name: eja-javaapp
      ports:
        - port: 8080
          protocol: TCP
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: eja
      app.kubernetes.io/name: eja-jclient
  policyTypes:
    - Ingress
    - Egress
