secure/secure-network-security-policies/old_knps/eja-redis-denyall.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-isolate
  namespace: eja
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: eja
      app.kubernetes.io/name: eja-redis
  policyTypes:
    - Ingress
    - Egress
