secure/secure-network-security-policies/old_knps/eja-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow
  namespace: eja
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: example-java-app
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eja
              app.kubernetes.io/name: eja-javaapp
      ports:
        - port: 6379
          protocol: TCP
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: eja
      app.kubernetes.io/name: eja-redis
  policyTypes:
    - Ingress
    - Egress
