secure/secure-network-security-policies/old_knps/general-denyall.yaml
kubectl create -f - <<EOF
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
